Media Recorder: adding initial support for media recorder (cam)
Signed-off-by: Ricardo Salveti de Araujo <ricardo.salveti@canonical.com>

--- a/hybris/include/Makefile.am
+++ b/hybris/include/Makefile.am
@@ -88,7 +88,8 @@ camerainclude_HEADERS = \
 
 mediaincludedir = $(includedir)/hybris/media
 mediainclude_HEADERS = \
-	hybris/media/media_compatibility_layer.h
+	hybris/media/media_compatibility_layer.h \
+	hybris/media/recorder_compatibility_layer.h
 
 android/version.h: android/version.h.in
 	@sed -e "s|\@android_version\@|$(ANDROID_VERSION)|" $<> $@
