--- a/hybris/tests/Makefile.am
+++ b/hybris/tests/Makefile.am
@@ -8,6 +8,7 @@ bin_PROGRAMS = \
 	test_input \
 	test_camera \
 	test_media \
+	test_recorder \
 	test_gps
 
 test_egl_SOURCES = test_egl.c
@@ -87,6 +88,18 @@ test_media_LDADD = \
 	$(top_builddir)/egl/libEGL.la \
 	$(top_builddir)/glesv2/libGLESv2.la \
 	$(top_builddir)/media/libmedia.la \
+	$(top_builddir)/sf/libsf.la
+
+test_recorder_SOURCES = test_recorder.c
+test_recorder_CFLAGS = \
+	-I$(top_srcdir)/include
+test_recorder_LDADD = \
+	$(top_builddir)/common/libhybris-common.la \
+	$(top_builddir)/egl/libEGL.la \
+	$(top_builddir)/glesv2/libGLESv2.la \
+	$(top_builddir)/media/libmedia.la \
+	$(top_builddir)/camera/libcamera.la \
+	$(top_builddir)/input/libis.la \
 	$(top_builddir)/sf/libsf.la
 
 test_gps_SOURCES = test_gps.c
