--- a/hybris/tests/Makefile.am
+++ b/hybris/tests/Makefile.am
@@ -1,4 +1,5 @@
 bin_PROGRAMS = \
+	test_audio \
 	test_egl \
 	test_glesv2 \
 	test_sensors \
@@ -10,6 +11,13 @@ bin_PROGRAMS = \
 	test_media \
 	test_recorder \
 	test_gps
+
+test_audio_SOURCES = test_audio.c
+test_audio_CFLAGS = \
+	-I$(top_srcdir)/include
+test_audio_LDADD = \
+	$(top_builddir)/common/libhybris-common.la \
+	$(top_builddir)/hardware/libhardware.la
 
 test_egl_SOURCES = test_egl.c
 test_egl_CFLAGS = \
