--- a/hybris/tests/Makefile.am
+++ b/hybris/tests/Makefile.am
@@ -7,6 +7,7 @@ bin_PROGRAMS = \
 	test_sf \
 	test_input \
 	test_camera \
+	test_media \
 	test_gps
 
 test_egl_SOURCES = test_egl.c
@@ -77,6 +78,16 @@ test_camera_LDADD = \
 	$(top_builddir)/glesv2/libGLESv2.la \
 	$(top_builddir)/camera/libcamera.la \
 	$(top_builddir)/input/libis.la
+
+test_media_SOURCES = test_media.c
+test_media_CFLAGS = \
+	-I$(top_srcdir)/include
+test_media_LDADD = \
+	$(top_builddir)/common/libhybris-common.la \
+	$(top_builddir)/egl/libEGL.la \
+	$(top_builddir)/glesv2/libGLESv2.la \
+	$(top_builddir)/media/libmedia.la \
+	$(top_builddir)/sf/libsf.la
 
 test_gps_SOURCES = test_gps.c
 test_gps_CFLAGS = -pthread \
