Implement get/set property via property service
The property service is running inside the android init daemon and
creates a socket in /dev/socket/property_service which we can use
for setting properties (getting is done via an extra android patch
to add 'get' and 'list' support in the property service).

Origin: vendor
Forwarded: no

--- a/hybris/Makefile.am
+++ b/hybris/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = include common hardware libsync egl glesv2 ui sf input camera media tests
+SUBDIRS = include properties common hardware libsync egl glesv2 ui sf input camera media utils tests
 
 MAINTAINERCLEANFILES = \
 	aclocal.m4 compile config.guess config.sub \
