--- a/hybris/include/Makefile.am
+++ b/hybris/include/Makefile.am
@@ -97,6 +97,10 @@ mediainclude_HEADERS = \
 	hybris/media/media_compatibility_layer.h \
 	hybris/media/recorder_compatibility_layer.h
 
+propertiesincludedir = $(includedir)/hybris/properties
+propertiesinclude_HEADERS = \
+	hybris/properties/properties.h
+
 android/version.h: android/version.h.in
 	@sed -e "s|\@android_version\@|$(ANDROID_VERSION)|" $<> $@
 
