--- a/hybris/include/Makefile.am
+++ b/hybris/include/Makefile.am
@@ -95,6 +95,10 @@ camerainclude_HEADERS = \
 mediaincludedir = $(includedir)/hybris/media
 mediainclude_HEADERS = \
 	hybris/media/media_compatibility_layer.h \
+	hybris/media/media_codec_layer.h \
+	hybris/media/media_codec_list.h \
+	hybris/media/media_format_layer.h \
+	hybris/media/surface_texture_client_hybris.h \
 	hybris/media/recorder_compatibility_layer.h
 
 propertiesincludedir = $(includedir)/hybris/properties
