hardware: adding missing power.h
Origin: vendor
Forwarded: no

--- a/hybris/include/Makefile.am
+++ b/hybris/include/Makefile.am
@@ -60,7 +60,8 @@ hardwareinclude_HEADERS = \
 	android/hardware/gralloc.h \
 	android/hardware/hardware.h \
 	android/hardware/sensors.h \
-	android/hardware/lights.h
+	android/hardware/lights.h \
+	android/hardware/power.h
 
 androidlinuxincludedir = $(includedir)/android/linux
 androidlinuxinclude_HEADERS = \
